[workspace]
resolver = "2"
members = ["corona-core", "threshold-types", "vss-types", "erasure-types", "merkle-types", "lamport-types", "static-config-types", "mss-types"]

# Corona — a garden of typestate crates that encode a domain's invariants through
# the same small vocabulary of compile-time primitives. See CHARTER.md.
