[package]
name = "accumulator-types"
version = "0.1.0"
edition = "2021"
description = "Corona leaf 11 — an append-only Merkle accumulator with witness staleness: the brand widened from provenance to snapshot identity (E0308), and the line where freshness stops reducing. TOY, not production crypto."
license = "MIT"

# Deliberately depends on nothing — not even `corona-core`. Like `merkle-types`,
# `lamport-types`, `ecash-types`, and `ratchet-types`, this leaf shares the garden's
# *vocabulary* (here the E0308-class brand and the E0451 seal), not any of the core's
# shared *modules*: an accumulator's membership is a yes/no fact (no k-of-n
# `Threshold`) and a hash tree is not field arithmetic (no `gf256`). It reuses
# `merkle-types`' *discipline* (a fresh generative-lifetime brand + a scoped closure),
# not its *code* — the append-only, epoch-versioned framing is the subject, and
# importing merkle's per-adoption brand would tangle it with this leaf's per-epoch one.
[dependencies]
