[package]
name = "arq-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Corona leaf 24 — reliable delivery (stop-and-wait ARQ) as typestate: the garden's first LIVENESS leaf. At-most-once, in-order delivery is a SAFETY property and reduces to the E0451 seal; 'the message is EVENTUALLY delivered' is a LIVENESS property and reduces to no primitive — nor to any finite runtime check (Alpern-Schneider 1985: a liveness property has no finite bad prefix). Discharged only by a fairness assumption on the environment plus temporal reasoning over infinite executions. TOY, not production."

# arq-types is STANDALONE (imports nothing in the garden): a leaf whose subject is
# *where a residue stops reducing* must not lean on sibling surfaces, and its
# subject (eventual delivery over a lossy channel) is unrelated to corona-core's
# k-of-n Threshold. It needs no crypto backend at all — the residue is about the
# temporal behaviour of an environment, not the unforgeability of frames (a real
# protocol authenticates frames; that binding is orthogonal to the liveness gap).
[dependencies]
