[package]
name = "consttime-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Corona leaf 25 — constant-time secret comparison (data-obliviousness / timing side-channels) as typestate. The SOURCE-level data-oblivious discipline (no secret-dependent branch or index) reduces to the E0451 seal used in a NEW mode — an 'oblivious seal' that makes a value opaque to control flow (no PartialEq/Ord/Index/Deref). But whether the combinators are ACTUALLY constant-time, and whether the compiler and microarchitecture preserve it, are residues no value-level type can reach — the operational/physical layer BENEATH the value abstraction (a fifth residue home; generalizing leaf 10's memory-residue hint). It inverts leaf 20's TIME axis (within the 18-cost / 20-delay / 21-space triad): not how much time one run takes, but whether the time LEAKS the secret across runs (a 2-safety relation). TOY, not production."

# consttime-types is STANDALONE (imports nothing in the garden): a leaf whose subject
# is *where a residue stops reducing* must not lean on sibling surfaces, and its
# subject (data-oblivious secret comparison) is unrelated to corona-core's k-of-n
# Threshold. It needs no crypto backend — the residue is about the operational
# behaviour of the compiled program, not the unforgeability of any value.
[dependencies]
