[package]
name = "lamport-types"
version = "0.2.0"
edition = "2021"
description = "Corona leaf 5 — Lamport one-time signatures as typestate. Graduated backend (SHA-256, u64-truncated) behind a fixed seam, but NOT production crypto: at the illustrative 64-bit width the scheme is existentially forgeable at ~2^32. The type discipline (E0382 move-linearity) is the subject."
license = "MIT"
# Not for crates.io: graduated BACKEND, but the illustrative 64-bit width leaves the
# scheme forgeable at ~2^32 (see src/hash.rs). A demonstration crate, not a dependency.
publish = false

# Shares the garden's *vocabulary* (the E0382 move-linearity primitive and the E0451
# seal), not any of `corona-core`'s shared *modules*: it needs neither `Threshold` (a
# signature is single-signer, not k-of-n) nor `gf256` (hash-based, not field arithmetic).
[dependencies]
# Graduated backend: the widely-used RustCrypto SHA-256 (truncated to 64 bits) replaces
# the toy FNV-1a behind the same `hash::digest`/`commit`/`prg` seam (see CHARTER.md,
# graduation criterion #2). LOAD-BEARING (∥ pow, ecash) on ALL THREE properties this
# construction needs: `commit` one-wayness AND `prg` PRF-ness (a third requirement textbook
# Lamport lacks, incurred by deriving all preimages from a seed) are now supplied at ~2^63.
# The third, collision resistance of the 64-bit `digest`, is also supplied — the toy had none —
# but only up to the illustrative WIDTH, capping it at ~2^32, so the scheme is still
# forgeable; see the `hash` module posture.
# `forbid(unsafe_code)` in this crate governs *our* code, not the vetted dependency.
sha2 = "0.10"
