[package]
name = "lamport-types"
version = "0.2.0"
edition = "2021"
description = "Corona leaf 5 — Lamport one-time signatures as typestate. Graduated backend (SHA-256, u64-truncated) behind a fixed seam, but NOT production crypto: at the illustrative 64-bit width the scheme is existentially forgeable under chosen message at ~2^32. The type discipline (E0382 move-linearity) is the subject."
license = "MIT"
# Not for crates.io: graduated BACKEND, but the illustrative 64-bit width leaves the
# scheme forgeable under chosen message at ~2^32 (see src/hash.rs). A demonstration crate, not a dependency.
publish = false

# Shares the garden's *vocabulary* (the E0382 move-linearity primitive and the E0451
# seal), not any of `corona-core`'s shared *modules*: it needs neither `Threshold` (a
# signature is single-signer, not k-of-n) nor `gf256` (hash-based, not field arithmetic).
[dependencies]
# Graduated backend: the widely-used RustCrypto SHA-256 (truncated to 64 bits) replaces
# the toy FNV-1a behind the same `hash::digest`/`commit`/`prg` seam (see CHARTER.md,
# graduation criterion #2). LOAD-BEARING (∥ pow, ecash) on ALL THREE unforgeability properties this
# construction needs: `commit` one-wayness, `prg` unpredictability (a requirement textbook
# Lamport lacks, incurred by deriving all preimages from a seed) and `digest` collision
# resistance. The toy failed all three. SHA-256 supplies the first two at ~2^63 and the third
# only up to the illustrative WIDTH, capping forgery at ~2^32, so the scheme is still
# forgeable. Two further assumptions (`prg` output-uniformity, `digest` preimage
# resistance) price the cost table without moving that floor; see the `hash` module posture.
# `forbid(unsafe_code)` in this crate governs *our* code, not the vetted dependency.
sha2 = "0.10"
