[package]
name = "merkle-types"
version = "0.1.0"
edition = "2021"
# usize::is_multiple_of (what clippy prefers, used in build_layers/proof) landed in 1.87.
rust-version = "1.87"
description = "Corona leaf 4 — Merkle inclusion proofs as typestate. TOY: a type-discipline demonstration, not production crypto."
license = "MIT"

# Deliberately depends on nothing — not even `corona-core`. This leaf shares the
# garden's *vocabulary* (the E0451 seal discipline), not any of the core's shared
# *modules*: it needs neither `Threshold` (no k-of-n reconstruction) nor `gf256`
# (a hash tree, not field arithmetic). See the "shares the discipline, not a
# dependency" finding in lib.rs.
[dependencies]
