[package]
name = "compose-probes"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

# Deliberately its OWN workspace: these probes are FEEDSTOCK, not a leaf. Keeping them out
# of the root workspace means they do not move the pinned test/leaf counts that
# `tools/check-claims.sh` guards, and `cargo test --workspace` at the root ignores them.
[workspace]

# The three REJECTIONS are behind a feature so a plain `cargo build` stays green while the
# sources that must NOT compile still live in the repo as ordinary, greppable Rust.
# `probe.sh` builds each one and asserts both the failure and its exact error code.
#
# They are NOT `compile_fail` doctests: rustdoc only enforces the `EXXXX` annotation on
# nightly, so on a stable toolchain a doctest fenced `compile_fail,E0599` still passes when
# the snippet fails with E0382. Mutation-tested and confirmed — the fence was decorative.
[features]
negatives = []

[[bin]]
name = "a_unit_x_accuracy"
[[bin]]
name = "b_dp_x_crdt"
[[bin]]
name = "c_translog_x_lamport"

[[bin]]
name = "d_swap_x_ecash"
[[bin]]
name = "e_arq_x_erasure"
[[bin]]
name = "f_consttime_x_threshold"
[[bin]]
name = "g_bloom_x_accumulator"
[[bin]]
name = "h_sigma_x_commit"
[[bin]]
name = "i_seam_e"
[[bin]]
name = "j_seam_h"
[[bin]]
name = "k_seam_c"
[[bin]]
name = "l_seam_g"

[[bin]]
name = "fail_a_carrier_is_not_a_parameter"
required-features = ["negatives"]
[[bin]]
name = "fail_b_budget_does_not_replicate"
required-features = ["negatives"]
[[bin]]
name = "fail_c_one_key_one_checkpoint"
required-features = ["negatives"]
[[bin]]
name = "fail_d_no_leaf_is_generic_in_the_traded_item"
required-features = ["negatives"]
[[bin]]
name = "fail_e_delivery_witness_is_sealed"
required-features = ["negatives"]
[[bin]]
name = "fail_f_two_secrets_do_not_meet"
required-features = ["negatives"]
[[bin]]
name = "fail_g_absence_is_not_inclusion"
required-features = ["negatives"]
[[bin]]
name = "fail_h_two_commitments_collide_by_name_only"
required-features = ["negatives"]
[[bin]]
name = "fail_i_seam_e_is_sealed"
required-features = ["negatives"]
[[bin]]
name = "fail_j_seam_h_is_sealed"
required-features = ["negatives"]
[[bin]]
name = "fail_k_seam_c_is_sealed"
required-features = ["negatives"]
[[bin]]
name = "fail_l_seam_g_is_sealed"
required-features = ["negatives"]

[dependencies]
unit-types = { path = "../../unit-types" }
numerical-accuracy = { path = "../../numerical-accuracy" }
dp-types = { path = "../../dp-types" }
crdt-types = { path = "../../crdt-types" }
translog-types = { path = "../../translog-types" }
lamport-types = { path = "../../lamport-types" }
corona-core = { path = "../../corona-core" }
swap-types = { path = "../../swap-types" }
ecash-types = { path = "../../ecash-types" }
arq-types = { path = "../../arq-types" }
erasure-types = { path = "../../erasure-types" }
consttime-types = { path = "../../consttime-types" }
threshold-types = { path = "../../threshold-types" }
bloom-types = { path = "../../bloom-types" }
accumulator-types = { path = "../../accumulator-types" }
sigma-types = { path = "../../sigma-types" }
commit-types = { path = "../../commit-types" }
